Added steps in relation to the prometheus metrics tab

--- a/doc-Monitoring_Alerts_and_Reporting/topics/Integrating_Prometheus_Alerts.adoc
+++ b/doc-Monitoring_Alerts_and_Reporting/topics/Integrating_Prometheus_Alerts.adoc
@@ -122,7 +122,15 @@ For example:
 ====
 +
 .. Click *Validate* to confirm that {product-title_short} can connect to the OpenShift Container Platform provider.
-. Add the Prometheus alerts endpoints in the *Alerts* tab:
+. In the *Metrics* tab, add the Prometheus metrics endpoint:
+.. Select a *Security Protocol* method to specify how to authenticate the service:
+* *SSL*: Authenticate the provider securely using a trusted Certificate Authority. Select this option if the provider has a valid SSL certificate and it is signed by a trusted Certificate Authority. No further configuration is required for this option.
+* *SSL trusting custom CA*: Authenticate the provider with a self-signed certificate. For this option, copy your provider’s CA certificate and paste into the *Trusted CA Certificates* box, in PEM format.
+* *SSL without validation*: Authenticate the provider insecurely using SSL. (Not recommended)
+.. Enter the *Hostname* (or IPv4 or IPv6 address). 
+.. Enter the *API Port* if your Prometheus provider uses a non-standard port for access. The default port is `443`.
+.. Click *Validate* to confirm that {product-title_short} can connect to the metrics.
+. In the *Alerts* tab, add the Prometheus alerts endpoint:
 .. Select a *Security Protocol* method to specify how to authenticate the service:
 * *SSL*: Authenticate the provider securely using a trusted Certificate Authority. Select this option if the provider has a valid SSL certificate and it is signed by a trusted Certificate Authority. No further configuration is required for this option.
 * *SSL trusting custom CA*: Authenticate the provider with a self-signed certificate. For this option, copy your provider’s CA certificate and paste into the *Trusted CA Certificates* box, in PEM format.
