Added missing step to select Prometheus metrics from the dropdown

--- a/doc-Monitoring_Alerts_and_Reporting/topics/Integrating_Prometheus_Alerts.adoc
+++ b/doc-Monitoring_Alerts_and_Reporting/topics/Integrating_Prometheus_Alerts.adoc
@@ -90,7 +90,8 @@ Complete the following procedure using the {product-title_short} user interface 
 . Enter a *Name* for the provider.
 . From the *Type* list, select *OpenShift Container Platform*.
 . Enter the appropriate *Zone* for the provider. If you do not specify a zone, it is set to `default`.
-. From the *Alerts* list, select *Prometheus* to enable external alerts. Selecting *Prometheus* adds an *Alerts* tab to the lower pane to configure the Prometheus service. Alerts are disabled by default.
+. From the *Alerts* list, select *Prometheus* to enable external alerts. Selecting *Prometheus* adds an *Alerts* tab to the lower pane to configure the Prometheus alerts service. Alerts are disabled by default.
+. From the *Metrics* list, select *Prometheus* to enable external metrics. Selecting *Prometheus* adds a *Metrics* tab to the lower pane to configure the Prometheus metrics service.
 . In the *Default* tab, add the default endpoints for the OpenShift provider: 
 .. Select a *Security Protocol* method to specify how to authenticate the provider:
 * *SSL*: Authenticate the provider securely using a trusted Certificate Authority. Select this option if the provider has a valid SSL certificate and it is signed by a trusted Certificate Authority. No further configuration is required for this option.
