api v3.0.0 - Assigning and Unassigning Policies from Policy Profiles

--- a/api/overview/versioning.adoc
+++ b/api/overview/versioning.adoc
@@ -87,7 +87,7 @@ Authentications refresh action https://github.com/ManageIQ/manageiq/pull/14717
 Refresh Configuration Script Sources action https://github.com/ManageIQ/manageiq/pull/14714
 Enable edit for all request types https://github.com/ManageIQ/manageiq/pull/14681
 Allow policies to be deleted via DELETE https://github.com/ManageIQ/manageiq/pull/14659
-API support for adding/removing Policies to/from Policy Profiles https://github.com/ManageIQ/manageiq/pull/14575
+Assigning and Unassining Policies from Policy Profiles 
 |*2.4.0* |/api, /api/v2.4.0 |June 2017 | CRUD on actions,
 Creating and accessing alert actions of alert resources,
 CRUD on Alert Definitions,
