--- a/api/reference/policies.adoc
+++ b/api/reference/policies.adoc
@@ -359,6 +359,7 @@ policy_profiles subcollection of resources. Policy management is available on th
 | Collection
 | /api/clusters
 | /api/hosts
+| /api/policy_profiles
 | /api/providers
 | /api/resource_pools
 | /api/templates
