api v3.0.0 - Enable edits for Automation and Provision Requests

--- a/api/overview/versioning.adoc
+++ b/api/overview/versioning.adoc
@@ -85,8 +85,7 @@ Correctly configure custom attributes for DELETEs https://github.com/ManageIQ/ma
 Updated providers refresh to return all tasks for multi-manager providers https://github.com/ManageIQ/manageiq/pull/14747
 Authentications refresh action https://github.com/ManageIQ/manageiq/pull/14717
 Refresh Configuration Script Sources action https://github.com/ManageIQ/manageiq/pull/14714
-Enable edit for all request types https://github.com/ManageIQ/manageiq/pull/14681
-Allow policies to be deleted via DELETE https://github.com/ManageIQ/manageiq/pull/14659
+Enable edits for Automation and Provision Requests,
 Assigning and Unassining Policies from Policy Profiles 
 |*2.4.0* |/api, /api/v2.4.0 |June 2017 | CRUD on actions,
 Creating and accessing alert actions of alert resources,
