api v3.0.0 - Refreshing Configuration Scripts Sources

--- a/api/overview/versioning.adoc
+++ b/api/overview/versioning.adoc
@@ -84,7 +84,7 @@ Render DELETE action for notifications https://github.com/ManageIQ/manageiq/pull
 Correctly configure custom attributes for DELETEs https://github.com/ManageIQ/manageiq/pull/14751
 Updated providers refresh to return all tasks for multi-manager providers https://github.com/ManageIQ/manageiq/pull/14747
 Authentications refresh action https://github.com/ManageIQ/manageiq/pull/14717
-Refresh Configuration Script Sources action https://github.com/ManageIQ/manageiq/pull/14714
+Refreshing Configuration Script Sources,
 Enable edits for Automation and Provision Requests,
 Assigning and Unassining Policies from Policy Profiles 
 |*2.4.0* |/api, /api/v2.4.0 |June 2017 | CRUD on actions,
