api v3.0.0 - Refreshing Authentications

--- a/api/overview/versioning.adoc
+++ b/api/overview/versioning.adoc
@@ -83,7 +83,7 @@ Enable custom actions for Vms API https://github.com/ManageIQ/manageiq/pull/1481
 Render DELETE action for notifications https://github.com/ManageIQ/manageiq/pull/14775
 Correctly configure custom attributes for DELETEs https://github.com/ManageIQ/manageiq/pull/14751
 Updated providers refresh to return all tasks for multi-manager providers https://github.com/ManageIQ/manageiq/pull/14747
-Authentications refresh action https://github.com/ManageIQ/manageiq/pull/14717
+Refreshing Authentications,
 Refreshing Configuration Script Sources,
 Enable edits for Automation and Provision Requests,
 Assigning and Unassining Policies from Policy Profiles 
