--- a/api/reference/configuration_script_sources.adoc
+++ b/api/reference/configuration_script_sources.adoc
@@ -14,7 +14,7 @@ Full CRUD actions on configuration script sources is available:
 * link:#querying-configuration-script-sources[Querying Configuration Script Sources]
 * link:#creating-configuration-script-sources[Creating Configuration Script Sources]
 * link:#editing-configuration-script-sources[Editing Configuration Script Sources]
-* link:#refresh-configuration-script-sources[Refresh Configuration Script Sources]
+* link:#refreshing-configuration-script-sources[Refreshing Configuration Script Sources]
 * link:#deleting-configuration-script-sources[Deleting Configuration Script Sources]
 
 [[querying-configuration-script-sources]]
@@ -113,8 +113,8 @@ POST /api/configuration_script_sources
 }
 ----
 
-[[refresh-configuration-script-sources]]
-=== Refresh Configuration Script Sources
+[[refreshing-configuration-script-sources]]
+=== Refreshing Configuration Script Sources
 
 Configuration script sources can be refreshed by posting a *refresh* action to a single
 resource or to multiple resources in bulk by targeting the collection.
