add procedure on creating an expression method

--- a/doc-Scripting_Actions/topics/chap_automation_model.adoc
+++ b/doc-Scripting_Actions/topics/chap_automation_model.adoc
@@ -96,6 +96,9 @@ include::To_create_a_method1.adoc[]
 
 include::Creating_a_Dynamic_Content_Dialog.adoc[]
 
+include::expression_method.adoc[]
+
+
 [[simulation]]
 === Simulation
 
