api v3.0.0 - Support multi-manager provider refreshes.

--- a/api/overview/versioning.adoc
+++ b/api/overview/versioning.adoc
@@ -82,7 +82,7 @@ Return href on create https://github.com/ManageIQ/manageiq/pull/15005
 Enable custom actions for Vms API https://github.com/ManageIQ/manageiq/pull/14817
 Render DELETE action for notifications https://github.com/ManageIQ/manageiq/pull/14775
 Correctly configure custom attributes for DELETEs https://github.com/ManageIQ/manageiq/pull/14751
-Updated providers refresh to return all tasks for multi-manager providers https://github.com/ManageIQ/manageiq/pull/14747
+Support multi-manager Provider refreshes,
 Refreshing Authentications,
 Refreshing Configuration Script Sources,
 Enable edits for Automation and Provision Requests,
