api v3.0.0 - Support DELETE method for Custom Attributes.

--- a/api/reference/custom_attributes.adoc
+++ b/api/reference/custom_attributes.adoc
@@ -179,7 +179,7 @@ In the following example, a request to delete custom attributes of a VM by name 
 [source,json]
 ----
 {
-  "action" : "edit",
+  "action" : "delete",
   "resources" : [
     { "name" : "ca_name1" },
     { "href" : "http://localhost:3000/api/vms/:id/custom_attributes/:id" }
@@ -187,4 +187,22 @@ In the following example, a request to delete custom attributes of a VM by name 
 }
 ----
 
+Custom attributes can be deleted via a _delete_ action as follows:
+
+----
+POST /api/vms/:id/custom_attributes/:ca_id
+----
+
+[source,json]
+----
+{
+  "action" : "delete"
+}
+----
+
+They can also be deleted via the DELETE method:
+
+----
+DELETE /api/vms/:id/custom_attributes/:ca_id
+----
 
