--- a/api/reference/provider_custom_attributes.adoc
+++ b/api/reference/provider_custom_attributes.adoc
@@ -175,12 +175,31 @@ In the following example, a request to delete custom attributes of a Provider by
 [source,json]
 ----
 {
-  "action" : "edit",
+  "action" : "delete",
   "resources" : [
     { "name" : "ca_name1" },
     { "href" : "http://localhost:3000/api/providers/:id/custom_attributes/:id" }
   ]
 }
+----
+
+Custom attributes can be deleted via a _delete_ action as follows:
+
+----
+POST /api/providers/:id/custom_attributes/:ca_id
+----
+
+[source,json]
+----
+{
+  "action" : "delete"
+}
+----
+
+They can also be deleted via the DELETE method:
+
+----
+DELETE /api/providers/:id/custom_attributes/:ca_id
 ----
 
 
