--- a/api/overview/versioning.adoc
+++ b/api/overview/versioning.adoc
@@ -81,7 +81,7 @@ Return BadRequestError when invalid attributes are specified https://github.com/
 Return href on create https://github.com/ManageIQ/manageiq/pull/15005
 Enable custom actions for Vms API https://github.com/ManageIQ/manageiq/pull/14817
 Render DELETE action for notifications https://github.com/ManageIQ/manageiq/pull/14775
-Correctly configure custom attributes for DELETEs https://github.com/ManageIQ/manageiq/pull/14751
+Support DELETE method for Custom Attributes,
 Support multi-manager Provider refreshes,
 Refreshing Authentications,
 Refreshing Configuration Script Sources,
