api v3.0.0 - fix notification action list returned, was missing the action for the DELETE HTTP method.

--- a/api/reference/notifications.adoc
+++ b/api/reference/notifications.adoc
@@ -99,6 +99,11 @@ GET /api/notifications?expand=resources&attributes=details
           "name": "delete",
           "method": "post",
           "href": "http://localhost:3000/api/notifications/44"
+        },
+        {
+          "name": "delete",
+          "method": "delete",
+          "href": "http://localhost:3000/api/notifications/44"
         }
       ]
     },
@@ -133,6 +138,11 @@ GET /api/notifications?expand=resources&attributes=details
           "name": "delete",
           "method": "post",
           "href": "http://localhost:3000/api/notifications/45"
+        },
+        {
+          "name": "delete",
+          "method": "delete",
+          "href": "http://localhost:3000/api/notifications/45"
         }
       ]
     },
@@ -166,6 +176,11 @@ GET /api/notifications?expand=resources&attributes=details
         {
           "name": "delete",
           "method": "post",
+          "href": "http://localhost:3000/api/notifications/46"
+        },
+        {
+          "name": "delete",
+          "method": "delete",
           "href": "http://localhost:3000/api/notifications/46"
         }
       ]
