resolved merge conflict

--- a/doc-Deployment_Planning_Guide/topics/planning.adoc
+++ b/doc-Deployment_Planning_Guide/topics/planning.adoc
@@ -47,9 +47,9 @@ endif::cfme[]
 
 === Roles 
 
-Server roles define what a server can do. Assigning different server roles to appliances can allow them to focus on specific functions. When planning a deployment, consider which roles to assign to each appliance. Some server roles are enabled by default in {product-title}.
+Server roles define what a server can do. Assigning different server roles to appliances can allow them to focus on specific functions. When planning a deployment, consider which roles to assign to each appliance. Some server roles are enabled by default in {product-title_short}.
 
-Some roles are also dependent on other roles. For example, when assigning the User Interface role to a server, the Web Services role must also be enabled for users to log in to the appliance. See https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.5/html/general_configuration/configuration#server-roles[Server Roles] in _General Configuration_
+Some roles are also dependent on other roles. For example, because the {product-title_short} user interface relies on the API for access, the Web Services role must be enabled with the User Interface role for users to log in to the appliance. See https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.5/html/general_configuration/configuration#server-roles[Server Roles] in _General Configuration_
 for details on each server role and its function.
 
 [[central-administration]]
