--- a/doc-General_Configuration/topics/Configuration.adoc
+++ b/doc-General_Configuration/topics/Configuration.adoc
@@ -547,7 +547,7 @@ This is the time zone used when created scheduled analyses. This is not the same
 [[server-control-settings]]
 ====== Server Control Settings
 
-Server role defines what a server can do. Red Hat recommends that Database Operations, Event Monitor, Reporting, Scheduler, SmartState Analysis, User Interface, Provider Inventory, Provider Operations, and Web Services be enabled on at least one server in each zone.
+A server role defines what a server can do. Red Hat recommends that Database Operations, Event Monitor, Reporting, Scheduler, SmartState Analysis, User Interface, Provider Inventory, Provider Operations, and Web Services be enabled on at least one server in each zone.
 These roles are enabled by default on all servers.
 
 * Use *Default Repository SmartProxy* to set the SmartProxy from which you refresh your virtual machine repositories. This host must have access to your repositories to analyze its virtual machines.
@@ -570,24 +570,23 @@ These roles are enabled by default on all servers.
 [width="100%",cols="50%,70%a,30%,55%",options="header",]
 |=======================================================================
 |Server Role|Description|Zone or Region Aware|Primary/Secondary or Active/Active
-|Automation Engine|Use this role if you want to use this {product-title} server to process automation tasks.|N/A|Active/Active
-|Capacity and Utilization Coordinator|The Capacity & Utilization Coordinator role checks to see if it is time to collect data, somewhat like a scheduler. If it is time, a job is queued for the Capacity and Utilization Data Collector. The coordinator role is required to complete Capacity and Utilization data collection. If more than one {product-title} server in a specific zone has this role, only one will be active at a time.|Zone|Primary/Secondary
-|Capacity & Utilization Data Collector|The Capacity & Utilization Data Collector performs the actual collection of capacity and utilization data. This role has a dedicated worker, and there can be more than one {product-title} server with this role in a zone.|Zone|Active/Active
-|Capacity & Utilization Data Processor|The Capacity & Utilization Data Processor processes all of the data collected, allowing {product-title} to create charts. This role has a dedicated worker, and there can be more than one {product-title} server with this role in a zone.|Zone|Active/Active
-|Database Operations|Use Database Operations to enable this {product-title} server to run database backups or garbage collection.|Zone|Active/Active
-|Embedded Ansible|This role is disabled by default. The Embedded Ansible role supports Ansible Automation Inside functionality. Enable this role to configure playbook repositories and run playbooks natively to back service catalog items.|Region|Primary/Secondary
-|Event Monitor|This role is enabled by default and provides the information shown in timelines. The Event Monitor is responsible for the work between the {product-title} server and your providers. It starts 2 workers for each provider. One worker, the monitor, is responsible for maintaining a connection to a provider, catching events, and putting them on the {product-title} message queue for processing. The second worker, the handler, is a message queue worker responsible for delivering only those messages for a provider. You should have at least one of these in each zone.|Zone|Primary/Secondary
-|Git Repository|The Git Repositories Owner server role supports importing domains into automate from a git repository. This feature is available from the Automate > Import/Export screen in the {product-title} user interface.|Region|Primary/Secondary
-|Notifier|Use this role if you will be using {product-title} Control or Automate to forward SNMP traps to a monitoring system or send e-mails. See <<Configuring SNMP>> for details on creating SNMP alerts. If more than one {product-title} server in a specific region has this role, only one will be active at a time.|Region|Primary/Secondary
-|Provider Inventory|This role is enabled by default. This role is responsible for refreshing provider information including EMS, hosts, virtual machines, and clusters, and is also responsible for capturing datastore file lists. If more than one {product-title} server in a specific zone has this role, only one will be active at a time.|Zone|Primary/Secondary
-|Provider Operations|This role is enabled by default. This role sends stop, start, suspend, shutdown guest, clone, reconfigure, and unregister to the provider, directly from the console or through a policy action if you have {product-title} Control. More than one {product-title} server can have this role in a zone.|Zone|Active/Active
-|RHN Mirror|An appliance with RHN Mirror enabled acts as a server containing a repository with the latest {product-title} packages. This also configures other appliances within the same region to point to the chosen RHN Mirror server for updates. This provides a low bandwidth method to update environments with multiple appliances.|N/A|Active/Active
-|Reporting|This role is enabled by default. The Reporting role specifies which {product-title} servers can generate reports. If you do not have a {product-title} server set to this role in a zone, then no reports can be generated in that zone. You should have at least one of these in each zone.|Zone|Active/Active
-|Scheduler|This role is enabled by default. The Scheduler sends messages to start all scheduled activities such as report generation and SmartState analysis. This role also controls all system schedules such as capacity and utilization data gathering. One server in each region must be assigned this role or scheduled {product-title} events will not occur. If more than one {product-title} server in a specific region has this role, only one will be active at a time.|Region|Primary/Secondary
-|SmartProxy|Enabling the SmartProxy role turns on the embedded SmartProxy on the {product-title} server. The embedded SmartProxy can analyze virtual machines that are registered to a host and templates that are associated with a provider. To provide visibility to repositories, install the SmartProxy on a host from the {product-title} console. This SmartProxy can also analyze virtual machines on the host on which it is installed. Enabling the SmartProxy role on an appliance requires selecting the SmartProxy Affinity for a zone to run a SmartState Analysis. By default, no selections are enabled under SmartProxy Affinity.|Zone|Active/Active
-|SmartState Analysis|This role is enabled by default. The SmartState Analysis role controls which {product-title} servers can control SmartState Analyses and process the data from the analysis. You should have at least one of these in each zone.|Zone|Active/Active
-|User Interface|This role is enabled by default. The Web Services role must also be enabled to log into the user interface, as this role queries the API to receive tokens for login. Uncheck User Interface if you do not want users to be able to access this {product-title} server using the {product-title} console. For example, you may want to turn this off if the {product-title} server is strictly being used for capacity and utilization or reporting generation. More than one {product-title} server can have this role in a zone.|Zone|Active/Active
-|Web Services|This role is enabled by default and must be enabled with the User Interface role to log into the user interface. Uncheck Web Services to stop this {product-title} server from acting as a Web service provider. More than one {product-title} server can have this role in a zone.|N/A|Active/Active
+|Automation Engine|Use this role if you want to use this {product-title_short} server to process automation tasks.|N/A|Active/Active
+|Capacity and Utilization Coordinator|The Capacity & Utilization Coordinator role checks to see if it is time to collect data, somewhat like a scheduler. If it is time, a job is queued for the Capacity and Utilization Data Collector. The coordinator role is required to complete Capacity and Utilization data collection. If more than one {product-title_short} server in a specific zone has this role, only one will be active at a time.|Zone|Primary/Secondary
+|Capacity & Utilization Data Collector|The Capacity & Utilization Data Collector performs the actual collection of capacity and utilization data. This role has a dedicated worker, and there can be more than one {product-title_short} server with this role in a zone.|Zone|Active/Active
+|Capacity & Utilization Data Processor|The Capacity & Utilization Data Processor processes all of the data collected, allowing {product-title_short} to create charts. This role has a dedicated worker, and there can be more than one {product-title_short} server with this role in a zone.|Zone|Active/Active
+|Database Operations|Use Database Operations to enable this {product-title_short} server to run database backups or garbage collection.|Zone|Active/Active
+|Event Monitor|This role is enabled by default and provides the information shown in timelines. The Event Monitor is responsible for the work between the {product-title_short} server and your providers. It starts 2 workers for each provider. One worker, the monitor, is responsible for maintaining a connection to a provider, catching events, and putting them on the {product-title_short} message queue for processing. The second worker, the handler, is a message queue worker responsible for delivering only those messages for a provider. You should have at least one of these in each zone.|Zone|Primary/Secondary
+|Git Repository|The Git Repositories Owner server role supports importing domains into automate from a git repository. This feature is available from the Automate > Import/Export screen in the {product-title_short} user interface.|Region|Primary/Secondary
+|Notifier|Use this role if you will be using {product-title_short} Control or Automate to forward SNMP traps to a monitoring system or send e-mails. See <<Configuring SNMP>> for details on creating SNMP alerts. If more than one {product-title_short} server in a specific region has this role, only one will be active at a time.|Region|Primary/Secondary
+|Provider Inventory|This role is enabled by default. This role is responsible for refreshing provider information including EMS, hosts, virtual machines, and clusters, and is also responsible for capturing datastore file lists. If more than one {product-title_short} server in a specific zone has this role, only one will be active at a time.|Zone|Primary/Secondary
+|Provider Operations|This role is enabled by default. This role sends stop, start, suspend, shutdown guest, clone, reconfigure, and unregister to the provider, directly from the console or through a policy action if you have {product-title_short} Control. More than one {product-title_short} server can have this role in a zone.|Zone|Active/Active
+|RHN Mirror|An appliance with RHN Mirror enabled acts as a server containing a repository with the latest {product-title_short} packages. This also configures other appliances within the same region to point to the chosen RHN Mirror server for updates. This provides a low bandwidth method to update environments with multiple appliances.|N/A|Active/Active
+|Reporting|This role is enabled by default. The Reporting role specifies which {product-title_short} servers can generate reports. If you do not have a {product-title_short} server set to this role in a zone, then no reports can be generated in that zone. You should have at least one of these in each zone.|Zone|Active/Active
+|Scheduler|This role is enabled by default. The Scheduler sends messages to start all scheduled activities such as report generation and SmartState analysis. This role also controls all system schedules such as capacity and utilization data gathering. One server in each region must be assigned this role or scheduled {product-title_short} events will not occur. If more than one {product-title_short} server in a specific region has this role, only one will be active at a time.|Region|Primary/Secondary
+|SmartProxy|Enabling the SmartProxy role turns on the embedded SmartProxy on the {product-title_short} server. The embedded SmartProxy can analyze virtual machines that are registered to a host and templates that are associated with a provider. To provide visibility to repositories, install the SmartProxy on a host from the {product-title_short} console. This SmartProxy can also analyze virtual machines on the host on which it is installed. Enabling the SmartProxy role on an appliance requires selecting the SmartProxy Affinity for a zone to run a SmartState Analysis. By default, no selections are enabled under SmartProxy Affinity.|Zone|Active/Active
+|SmartState Analysis|This role is enabled by default. The SmartState Analysis role controls which {product-title_short} servers can control SmartState Analyses and process the data from the analysis. You should have at least one of these in each zone.|Zone|Active/Active
+|User Interface|This role is enabled by default. The Web Services role must also be enabled with this role to log into the user interface, as the User Interface role queries the API to receive tokens for login. Uncheck User Interface if you do not want users to be able to access this {product-title_short} server using the {product-title_short} console. For example, you may want to turn this off if the {product-title_short} server is strictly being used for capacity and utilization or reporting generation. More than one {product-title_short} server can have this role in a zone.|Zone|Active/Active
+|Web Services|This role is enabled by default. The Web Services roles provides API access and must be enabled if the User Interface role is enabled to log into the user interface. You can also enable the Web Services role to provide API-only access to the server. Uncheck Web Services to stop this {product-title_short} server from acting as a web service provider. More than one {product-title_short} server can have this role in a zone.|N/A|Active/Active
 |Websocket|This role enables starting or stopping websocket workers required for proxying remote consoles.|N/A|Active/Active
 |=======================================================================
 
