--- a/common/provider-ocp-add-container.adoc
+++ b/common/provider-ocp-add-container.adoc
@@ -12,27 +12,29 @@
 +
 [NOTE]
 ====
-To obtain your OpenShift Container Platform provider's CA certificate, run the `oc get secret` command on your provider, substituting values for your provider and token as needed. To obtain a token for your provider, see xref:Obtaining_OpenShift_Container_Platform_Management_Token[].
-
-For example:
-
-  # oc get secret --namespace management-infra management-admin-token-8ixxs --template='{{index .data "ca.crt"}}' | base64 --decode
-  
-Paste the output (a block of text starting with `-----BEGIN CERTIFICATE-----`) into the *Trusted CA Certificates* field.
+You can obtain your OpenShift Container Platform provider's CA certificate for all endpoints (default, metrics, alerts) from `/etc/origin/master/ca.crt`. Paste the output (a block of text starting with `-----BEGIN CERTIFICATE-----`) into the *Trusted CA Certificates* field.
 ====
 +
 * *SSL without validation*: Authenticate the provider insecurely (not recommended).
-.. Enter the *Hostname* or IPv4 or IPv6 address of the provider.
+.. Enter the *Hostname* (or IPv4 or IPv6 address) of the provider.
 +
 [IMPORTANT]
 ====
 The *Hostname* must use a unique fully qualified domain name.
 ====
 +
-.. Enter the *API Port* of the provider.
-  The default port is `8443`.
-.. Enter the OpenShift management token in the *Token* field. This is the token obtained earlier in xref:Obtaining_OpenShift_Container_Platform_Management_Token[].
-.. Enter the same token in the *Confirm Token* field.
+.. Enter the *API Port* of the provider. The default port is `8443`.
+.. Enter a token for your provider in the *Token* box.
++
+[NOTE]
+====
+To obtain a token for your provider, run the `oc get secret` command on your provider; see link:https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.6-beta/html-single/managing_providers/#Obtaining_OpenShift_Container_Platform_Management_Token[Obtaining an OpenShift Container Platform Management Token].
+
+For example:
+
+# oc get secret --namespace management-infra management-admin-token-8ixxs --template='{{index .data "ca.crt"}}' | base64 --decode
+====
++
 .. Click *Validate* to confirm that {product-title} can connect to the OpenShift Container Platform provider.
 . If you selected a metrics service, configure the service's details in the *Metrics* tab:
 .. Select a *Security Protocol* method to specify how to authenticate the service:
@@ -41,23 +43,21 @@ The *Hostname* must use a unique fully qualified domain name.
 +
 [NOTE]
 ====
-In OpenShift, the default deployment of the router generates certificates during installation, which can be used with the *SSL trusting custom CA* option. Connecting a Hawkular endpoint with this option requires the CA certificate that the cluster uses for service certificates, which is stored in `/etc/origin/master/service-signer.crt` on the first master in a cluster. You can also obtain the certificate from the cluster by running the following on your provider:
-
-  # oc get secrets $(oc get secrets -n default -o jsonpath='{.items[?(@.type=="kubernetes.io/service-account-token")].metadata.name}{"\n"}' | grep  -Eo "router.+" | awk '{print $1}') -n default -o jsonpath='{.data.ca\.crt}{"\n"}' | base64 -d
+In OpenShift, the default deployment of the router generates certificates during installation, which can be used with the *SSL trusting custom CA* option. Connecting a Hawkular endpoint with this option requires the CA certificate that the cluster uses for service certificates, which is stored in `/etc/origin/master/service-signer.crt` on the first master in a cluster.
 ====
 +
 * *SSL without validation*: Authenticate the provider insecurely using SSL. (Not recommended)
 .. Enter the *Hostname* or IPv4 or IPv6 address of the provider, or use the *Detect* button to find the hostname.
 .. Enter the *API Port* if your Hawkular provider uses a non-standard port for access. The default port is `443`.
 .. Click *Validate* to confirm that {product-title} can connect to the metrics endpoint.
-. If you selected the *Prometheus* alerts service, configure the service's details in the *Alerts* tab:
+. If you selected the *Prometheus* alerts service, add the Prometheus alerts endpoint in the *Alerts* tab:
 .. Select a *Security Protocol* method to specify how to authenticate the service:
 * *SSL*: Authenticate the provider securely using a trusted Certificate Authority. Select this option if the provider has a valid SSL certificate and it is signed by a trusted Certificate Authority. No further configuration is required for this option.
 * *SSL trusting custom CA*: Authenticate the provider with a self-signed certificate. For this option, copy your provider’s CA certificate to the *Trusted CA Certificates* box in PEM format.
 * *SSL without validation*: Authenticate the provider insecurely using SSL. (Not recommended)
-.. Enter the *Hostname* or IPv4 or IPv6 address of the provider. 
+.. Enter the *Hostname* (or IPv4 or IPv6 address) or alert *Route*. 
 .. Enter the *API Port* if your Prometheus provider uses a non-standard port for access. The default port is `443`.
-.. Click *Validate* to confirm that {product-title} can connect to the alerts service.
+.. Click *Validate* to confirm that {product-title_short} can connect to the alerts service.
 . Click *Add*.
 
 
