Fixed some incorrect steps as well as updated some to match the latest changes in the UI.

--- a/common/provider-ocp-add-container.adoc
+++ b/common/provider-ocp-add-container.adoc
@@ -47,7 +47,7 @@ In OpenShift, the default deployment of the router generates certificates during
 ====
 +
 * *SSL without validation*: Authenticate the provider insecurely using SSL. (Not recommended)
-.. Enter the *Hostname* or IPv4 or IPv6 address of the provider, or use the *Detect* button to find the hostname.
+.. Enter the *Hostname* (or IPv4 or IPv6 address) of the provider, or use the *Detect* button to find the hostname.
 .. Enter the *API Port* if your Hawkular provider uses a non-standard port for access. The default port is `443`.
 .. Click *Validate* to confirm that {product-title} can connect to the metrics endpoint.
 . If you selected the *Prometheus* alerts service, add the Prometheus alerts endpoint in the *Alerts* tab:
