api v3.0.0 - Custom Actions on remaining models

--- a/api/overview/versioning.adoc
+++ b/api/overview/versioning.adoc
@@ -12,9 +12,6 @@ Dialog field/tab deletion https://github.com/ManageIQ/manageiq-api/pull/239
 Specify a target and resource when refreshing a dialog field https://github.com/ManageIQ/manageiq-api/pull/233
 Specify a target and resource action when retrieving a service dialog https://github.com/ManageIQ/manageiq-api/pull/231
 Tasks delete support https://github.com/ManageIQ/manageiq-api/pull/220
-Add custom action support for models https://github.com/ManageIQ/manageiq-api/pull/213
-Do not expand custom actionson collection searches https://github.com/ManageIQ/manageiq-api/pull/204
-custom actions on generic objects https://github.com/ManageIQ/manageiq-api/pull/194
 physical servers refresh https://github.com/ManageIQ/manageiq-api/pull/189
 container_projects collection https://github.com/ManageIQ/manageiq-api/pull/182
 set_current_group for users https://github.com/ManageIQ/manageiq-api/pull/176
@@ -79,7 +76,7 @@ Add support for Cloud Volume Delete action https://github.com/ManageIQ/manageiq/
 configuration_script_sources subcollection https://github.com/ManageIQ/manageiq/pull/15070
 Return BadRequestError when invalid attributes are specified https://github.com/ManageIQ/manageiq/pull/15040
 Return href on create https://github.com/ManageIQ/manageiq/pull/15005
-Enable custom actions for Vms API https://github.com/ManageIQ/manageiq/pull/14817
+Enable custom actions for several collections,
 Support DELETE method for Custom Attributes,
 Support multi-manager Provider refreshes,
 Refreshing Authentications,
